[gd_scene load_steps=17 format=3 uid="uid://bn3v20pcxftws"]

[ext_resource type="PackedScene" uid="uid://cj462uvp4qvw7" path="res://camera_2d.tscn" id="1_36ixg"]
[ext_resource type="Script" path="res://world.gd" id="1_pt8ln"]
[ext_resource type="Script" path="res://InventoryManagers/InventoryInterface.gd" id="6_ofg27"]
[ext_resource type="Theme" uid="uid://dbvmo5viem8os" path="res://UI/withering_menu.tres" id="8_i4wk2"]
[ext_resource type="PackedScene" uid="uid://dw8etjyyewe8g" path="res://InventoryManagers/slot.tscn" id="8_m71rl"]
[ext_resource type="PackedScene" uid="uid://behomoagxuhtf" path="res://InventoryManagers/withering_menu.tscn" id="8_qbujd"]
[ext_resource type="PackedScene" uid="uid://bxeaagi03qgrd" path="res://InventoryManagers/hot_bar_inventory.tscn" id="9_44i8a"]
[ext_resource type="PackedScene" uid="uid://dqjdvsaiqyrp3" path="res://InventoryManagers/drying_menu.tscn" id="9_wpncx"]
[ext_resource type="PackedScene" uid="uid://bw18h83q04os2" path="res://UI/CounterUI.tscn" id="10_b0lvu"]
[ext_resource type="PackedScene" uid="uid://dvaoa8lonnk82" path="res://UI/health_ui.tscn" id="12_foq2c"]
[ext_resource type="LabelSettings" uid="uid://7tgrr3fs72vu" path="res://UI/GUI labels.tres" id="12_l3byq"]
[ext_resource type="PackedScene" uid="uid://ba3yi75by7i4l" path="res://InventoryManagers/tea_storage_inventory.tscn" id="12_wk2ft"]
[ext_resource type="PackedScene" uid="uid://dxqqtfb3ex7oe" path="res://Globals/TeaMarket/tea_market.tscn" id="14_auj6w"]
[ext_resource type="PackedScene" uid="uid://bxy5ij2avjjte" path="res://InventoryManagers/inventory.tscn" id="15_j1xfr"]
[ext_resource type="PackedScene" uid="uid://dogg1xuy0ph4a" path="res://Maps/HomeFarm.tscn" id="16_7o0ng"]
[ext_resource type="PackedScene" uid="uid://yp4yqs7tmgiq" path="res://Effects/day_night_light.tscn" id="43_8rxbt"]

[node name="World" type="Node2D"]
script = ExtResource("1_pt8ln")

[node name="Camera2D" parent="." instance=ExtResource("1_36ixg")]
position = Vector2(303, -8)

[node name="TopLeft" parent="Camera2D/Limits" index="0"]
position = Vector2(-128, -64)

[node name="BottomRight" parent="Camera2D/Limits" index="1"]
position = Vector2(416, 256)

[node name="DirectionalLight2DDayNight" parent="." instance=ExtResource("43_8rxbt")]

[node name="UI" type="CanvasLayer" parent="."]

[node name="HealthUI" parent="UI" instance=ExtResource("12_foq2c")]
offset_top = 16.0
offset_bottom = 29.0

[node name="HotBarInventory" parent="UI" instance=ExtResource("9_44i8a")]
offset_left = 100.0
offset_top = 147.0
offset_right = 180.0
offset_bottom = 167.0
theme = ExtResource("8_i4wk2")

[node name="InventoryInterface" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 0
script = ExtResource("6_ofg27")

[node name="PlayerInventory" parent="UI/InventoryInterface" instance=ExtResource("15_j1xfr")]
visible = false
layout_mode = 0
offset_left = 235.0
offset_top = 16.0
offset_right = 275.0
offset_bottom = 56.0
theme = ExtResource("8_i4wk2")

[node name="ExternalInventory" parent="UI/InventoryInterface" instance=ExtResource("15_j1xfr")]
visible = false
layout_mode = 0
offset_left = 8.0
offset_top = 40.0
offset_right = 48.0
offset_bottom = 80.0
theme = ExtResource("8_i4wk2")

[node name="WitheringMenu" parent="UI/InventoryInterface" instance=ExtResource("8_qbujd")]
visible = false
layout_mode = 1
offset_left = 74.0
offset_top = 27.0
offset_right = 74.0
offset_bottom = 27.0

[node name="DryingMenu" parent="UI/InventoryInterface" instance=ExtResource("9_wpncx")]
visible = false
layout_mode = 1

[node name="TeaStorageInventory" parent="UI/InventoryInterface" instance=ExtResource("12_wk2ft")]
visible = false
layout_mode = 1

[node name="GrabbedSlot" parent="UI/InventoryInterface" instance=ExtResource("8_m71rl")]
visible = false
modulate = Color(1, 1, 1, 0.45098)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
mouse_filter = 2

[node name="MarginContainer" parent="UI/InventoryInterface/GrabbedSlot" index="0"]
mouse_filter = 2

[node name="TextureRect" parent="UI/InventoryInterface/GrabbedSlot/MarginContainer" index="0"]
mouse_filter = 2

[node name="TeaMarket" parent="UI" instance=ExtResource("14_auj6w")]
visible = false
offset_left = 39.0
offset_top = 28.0
offset_right = 39.0
offset_bottom = 28.0

[node name="CounterUI" parent="UI" instance=ExtResource("10_b0lvu")]

[node name="Clock" parent="UI/CounterUI" index="0"]
text = "Timer"
label_settings = ExtResource("12_l3byq")

[node name="Level" parent="." instance=ExtResource("16_7o0ng")]

[node name="DirtPathTileMap" parent="Level" index="2" groups=["buildable_tile_maps"]]

[editable path="Camera2D"]
[editable path="UI/HealthUI"]
[editable path="UI/InventoryInterface/ExternalInventory"]
[editable path="UI/InventoryInterface/WitheringMenu"]
[editable path="UI/InventoryInterface/DryingMenu"]
[editable path="UI/InventoryInterface/GrabbedSlot"]
[editable path="UI/TeaMarket"]
[editable path="UI/TeaMarket/PanelContainer/RegionRambonia"]
[editable path="UI/TeaMarket/PanelContainer/RegionWyrood"]
[editable path="UI/TeaMarket/PanelContainer/RegionDuk"]
[editable path="UI/TeaMarket/PanelContainer/RegionKhit-haetia"]
[editable path="UI/TeaMarket/PanelContainer/RegionSitgoom"]
[editable path="UI/TeaMarket/PanelContainer/RegionNivalis"]
[editable path="UI/CounterUI"]
[editable path="Level"]
